Fix spacing and button size

--- a/src/randomquote.css
+++ b/src/randomquote.css
@@ -33,7 +33,7 @@ h1, h2 {
 /* Header and Footer
 ====================*/
 header {
-  margin-top: 200px;
+  margin-top: 100px;
   text-align: center;
   grid-row: 1;
 }
@@ -53,9 +53,8 @@ main {
 /* App
 ====================*/
 .tweet {
-  width: 5%;
+  width: 50px;
   height: auto;
-  margin-bottom: -9px;
 }
 
 #text {
@@ -68,15 +67,14 @@ main {
 }
 
 #new-quote {
-  width: 120px;
-  height: 60px;
+  width: 12em;
+  height: 3em;
   font-size: 1em;
   border-radius: 8px;
   background-color: #693220;
   color: white;
   border: none;
   text-align: center;
-  padding: 10px;
   border: none;
   text-decoration: none;
   cursor: pointer;
